--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,6 +35,14 @@ jobs:
             IMAGE="sachin62/flask-app"
             docker tag flask-app sachin62/flask-app:latest
             docker push sachin62/flask-app:latest
+
+      - run:
+          name: Install kubectl
+          command: |
+             curl -LO "https://dl.k8s.io/release/$(curl -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
+             chmod +x kubectl
+             sudo mv kubectl /usr/local/bin/
+
       - run:
          name: restart deployment
          command: |
