--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,9 +39,8 @@ jobs:
       - run:
           name: Install kubectl
           command: |
-             curl -LO "https://dl.k8s.io/release/$(curl -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
-             chmod +x kubectl
-             sudo mv kubectl /usr/local/bin/
+              sudo apt-get update && sudo apt-get install -y kubectl
+              kubectl version --client
 
       - run:
          name: restart deployment
