--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,12 +39,10 @@ jobs:
       - run:
           name: Install kubectl
           command: |
-              sudo apt-get update
-              sudo apt-get install -y apt-transport-https ca-certificates curl
-              sudo curl -fsSLo /usr/share/keyrings/kubernetes-archive-keyring.gpg https://packages.cloud.google.com/apt/doc/apt-key.gpg
-              echo "deb [signed-by=/usr/share/keyrings/kubernetes-archive-keyring.gpg] https://apt.kubernetes.io/ kubernetes-xenial main" | sudo tee /etc/apt/sources.list.d/kubernetes.list
-              sudo apt-get update
-              sudo apt-get install -y kubectl
+              sudo dnf install -y curl
+              curl -LO "https://dl.k8s.io/release/$(curl -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
+              chmod +x kubectl
+              sudo mv kubectl /usr/local/bin/
               kubectl version --client
 
       - run:
