--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,6 +48,9 @@ jobs:
           name: Configure AWS CLI & kubeconfig
           command: |
               sudo apt-get update && sudo apt-get install -y awscli
+              aws configure set aws_access_key_id $AWS_ACCESS_KEY_ID
+              aws configure set aws_secret_access_key $AWS_SECRET_ACCESS_KEY
+              aws configure set default.region $AWS_REGION
               aws eks --region $AWS_REGION update-kubeconfig --name $EKS_CLUSTER_NAME
               kubectl get nodes
 
