--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,9 +45,17 @@ jobs:
               kubectl version --client
 
       - run:
-          name: Configure AWS CLI & kubeconfig
+          name: Install AWS CLI v2
           command: |
-              sudo apt-get update && sudo apt-get install -y awscli
+               curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+               unzip awscliv2.zip
+               sudo ./aws/install --update
+               aws --version
+
+      - run:
+          name: kubeconfig
+          command: |
+              sudo apt-get update 
               aws configure set aws_access_key_id $AWS_ACCESS_KEY_ID
               aws configure set aws_secret_access_key $AWS_SECRET_ACCESS_KEY
               aws configure set default.region $AWS_REGION
